--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@ignite-ui/react": "^2.2.4",
@@ -19,5 +19,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.4.5"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2"
   }
 }
