--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "next": "14.2.3",
