--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.4.2",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^5.14.0",
+    "@tanstack/react-query": "^5.40.1",
     "@types/node": "20.12.13",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
