--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.11",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "googleapis": "^140.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "nookies": "^2.5.2",
